--- a/_site.yml
+++ b/_site.yml
@@ -1,12 +1,16 @@
-name: "Training"
-title: "My Website"
+name: "Antony R Training"
+title: "R Training"
 description: |
-  My Website
+  This is part of the R Training provided by the CDS unit
 output_dir: "docs"
 navbar:
-  right:
+  left:
     - text: "Home"
       href: index.html
-    - text: "About"
-      href: about.html
+    - text: "Master Project"
+      menu:
+        - text: "About"
+          href: MasterProject.html
+        - text: "Results"
+          href: results.html
 output: distill::distill_article
