Updated website, added Results

--- a/_site.yml
+++ b/_site.yml
@@ -13,4 +13,6 @@ navbar:
           href: MasterProject.html
         - text: "Results"
           href: results.html
-output: distill::distill_article
+output:
+  distill::distill_article:
+    toc: true
